--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <title>Udundi Coding Challenge</title>
-        <link rel="stylesheet" href="./css/main.css" />
+        <meta name="googlebot" content="noindex" />
+        <meta name="robots" content="noimageindex, nofollow, nosnippet" />
+        <link rel="stylesheet" href="./css/desktop.css" />
+        <link rel="stylesheet" media="screen and (max-width: 1080px)" href="./css/mobile.css" />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -19,8 +22,20 @@
                 <div class="background__wallpaper"></div>
             </div>
 
+            <!-- ---------- Navigation ---------- -->
+            <div class="nav animate__animated animate__fadeInDownBig">
+                <ul class="nav__ul">
+                    <i class="fas fa-list"></i>
+                    <li class="nav__ul-li"><a href="#">Explorer</a></li>
+                    <li class="nav__ul-li"><a href="#">Plan</a></li>
+                    <li class="nav__ul-li"><a href="#">Discover</a></li>
+                    <li class="nav__ul-li"><a href="#">Stay</a></li>
+                    <i class="fas fa-search"></i>
+                </ul>
+            </div>
+
             <!-- ---------- Heading ---------- -->
-            <div class="heading animate__animated animate__fadeIn">
+            <div class="heading animate__animated animate__fadeInLeftBig">
                 <h2 class="heading__title">Explorer</h2>
                 <div class="heading__description">
                     <button class="heading__description-button" id="more">
@@ -63,7 +78,7 @@
             </div>
 
             <!-- ---------- Social Media ---------- -->
-            <div class="social-media animate__animated animate__fadeIn">
+            <div class="social-media animate__animated animate__fadeInUpBig">
                 <a href="https://www.facebook.com" target="__blank" title="facebook">
                     <img
                         class="social-media__facebook"
@@ -82,5 +97,6 @@
             </div>
         </main>
         <script src="./js/main.js"></script>
+        <script src="https://kit.fontawesome.com/62f9e37583.js" crossorigin="anonymous"></script>
     </body>
 </html>
