files: add github icon on index.html

--- a/src/index.html
+++ b/src/index.html
@@ -79,9 +79,20 @@
 
             <!-- ---------- Social Media ---------- -->
             <div class="social-media animate__animated animate__fadeInUpBig">
+                <a
+                    href="https://github.com/wajeht/udundi-coding-challenge"
+                    target="__blank"
+                    title="github"
+                >
+                    <img
+                        class="social-media__card"
+                        src="./img/github.svg"
+                        alt="an image of github"
+                    />
+                </a>
                 <a href="https://www.facebook.com" target="__blank" title="facebook">
                     <img
-                        class="social-media__facebook"
+                        class="social-media__card"
                         src="./img/facebook.svg"
                         alt="an image of facebook"
                     />
@@ -89,7 +100,7 @@
 
                 <a href="https://www.instagram.com" target="__blank" title="instagram">
                     <img
-                        class="social-media__instagram"
+                        class="social-media__card"
                         src="./img/instagram.svg"
                         alt="an image of instagram"
                     />
