chore: add fallback background color and animation on wallpaper

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             <!-- ---------- Background ---------- -->
             <div class="background">
                 <div class="background__sidebar"></div>
-                <div class="background__wallpaper"></div>
+                <div class="background__wallpaper animate__animated animate__fadeIn"></div>
             </div>
 
             <!-- ---------- Navigation ---------- -->
