--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,8 @@
         <meta name="googlebot" content="noindex" />
         <meta name="robots" content="noimageindex, nofollow, nosnippet" />
         <link rel="stylesheet" href="./css/desktop.css" />
+        <link rel="stylesheet" href="./css/animate.min.css" />
         <link rel="stylesheet" media="screen and (max-width: 1080px)" href="./css/mobile.css" />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-        />
     </head>
     <body>
         <main>
@@ -96,6 +93,5 @@
             </div>
         </main>
         <script src="./js/main.js"></script>
-        <script src="https://kit.fontawesome.com/62f9e37583.js" crossorigin="anonymous"></script>
     </body>
 </html>
