feat: update links and deploy script

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
                 <button
                     class="card__button"
                     target="__blank"
-                    onclick=" window.open('https://www.jaw.cool/', '__blank');"
+                    onclick=" window.open('https://www.jaw.dev/', '__blank');"
                 >
                     Read more
                 </button>
